# faf-dns-proxy

./: .gitignore  Cargo.toml  DESIGN.md  README.md  build.rs  faf-dns-proxy  optional_optimized_compile.sh
.cargo/: config  config.toml
example-systemd/: faf-dns-proxy.service
intercept/: Cargo.toml  build.rs
intercept/examples/: simple_usage.rs
intercept/src/: cache.rs  ebpf.rs  error.rs  lib.rs  monitor.rs  types.rs  udp_intercept.c  vmlinux.h
proxy/: Cargo.toml
proxy/example-systemd/: faf-dns-proxy.service
proxy/src/: args.rs  blocklist.rs  cache.rs  dns.rs  ebpf_client.rs  filter.rs  inspect_client.rs  main.rs  network.rs  proxy.rs  statics.rs  stats.rs  util.rs
src/: args.rs  blocklist.rs  cache.rs  chart.rs  const_config.rs  const_sys.rs  dns.rs  ebpf_client.rs  epoll.rs  filter.rs  hasher.rs  http_content_length.rs  inspect_client.rs  lib.rs  main.rs  net.rs  network.rs  proxy.rs  query_cache.rs  resolver.rs  resolver_config.rs  statics.rs  stats.rs  time.rs  tls.rs  u64toa.rs  util.rs
src/bpf/: socket_tracker.c
