[package]
name = "faf-dns-proxy"
version = "0.8.0"
authors = ["James Bates <errantmind@protonmail.com>"]
edition = "2021"

[profile.dev]
opt-level = 1
debug = true
debug-assertions = true
overflow-checks = true
lto = false
panic = 'unwind'
incremental = true
codegen-units = 256
rpath = false

[profile.dev.package."*"]
opt-level = 3

[profile.release]
opt-level = 3
panic = 'abort'
codegen-units = 1
lto = "thin"
debug = false
incremental = false
overflow-checks = false
strip = 'symbols'

[features]
default = []

[dependencies]
tcmalloc = { version = "0.3.0", default-features = false, features = ["bundled"] }

clap = { version = "4.4.11", default-features = true, features = ["derive"] }
lazy_static = "1.4.0"
once_cell = "1.19.0"
webpki-roots = "0.26.0"

dashmap = "5.5.3"
hashbrown = { version = "0.14.3", default-features = true, features = ["inline-more", "ahash"] }

# faster channel
kanal = "0.1.0-pre8"

# async runtime/executor
tokio = { version = "1.34.0", features = ["rt-multi-thread", "net", "io-util", "time", "macros", "sync"] }
tokio-rustls = { version = "0.25.0", features = ["default", "early-data"] }

# walk directories, enumerating files
walkdir = "2.3.2"

# easy serialization and deserialization
serde = { version = "1.0.193", default-features = false, features = ["derive"] }

# disk storage format
bincode = { version = "1.3.3", default-features = false }

# compression
flate2 = { version = "1.0.28", default-features = false, features = ["zlib"] }

# http
reqwest = "0.11.23"

# chrono, parse rfc2822 dates from http Last-Modified header
chrono = "0.4.31"

# fast hasher
xxhash-rust = { version = "0.8.8", features = ["xxh3"] }

# faster hasher for keys that are particular primitives
nohash-hasher = "0.2.0"


[target.'cfg(target_os = "linux")'.dependencies]
# get pid of sending process (if local machine)
netlink-packet-core = "0.7.0"
netlink-packet-sock-diag = "0.4.2"
netlink-sys = "0.8.5"
procfs = "0.16.0"