[workspace]
members = ["proxy", "intercept"]
default-members = ["proxy"]
resolver = "2"

[workspace.dependencies]
# Common dependencies that can be shared across workspace members
anyhow = "1.0.98"
libc = "0.2"
tokio = { version = "1.46.1", features = [
    "rt-multi-thread",
    "net",
    "io-util", 
    "time",
    "macros",
    "sync",
    "signal",
] }

# Shared profiles for all workspace members
[profile.dev]
opt-level = 1
debug = true
debug-assertions = true
overflow-checks = true
lto = false
panic = 'unwind'
incremental = true
codegen-units = 256
rpath = false

[profile.dev.package."*"]
opt-level = 3

[profile.release]
opt-level = 3
panic = 'abort'
codegen-units = 1
lto = "thin"
debug = false
incremental = false
overflow-checks = false
strip = 'symbols'